feat: introduce AdminClientFactory for Kafka ACL service and add comprehensive unit and integration tests